--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -313,3 +313,29 @@
     opacity: 1.0;
     filter: alpha(opacity=100); /*IE*/
 }
+
+#home, #left_arrow, #right_arrow{
+    height: 32px;
+    width: 32px;
+    background-image: url(../images/sprites.png);
+    background-repeat: no-repeat;
+}
+
+#home{
+    background-position: 0 0;
+}
+
+#left_arrow{
+    background-position: -64px 0;
+}
+
+#right_arrow{
+    background-position: -128px 0;
+}
+
+@media print{
+    p{
+        font-family: times,serif;
+        font-weight: bold;
+    }
+}
